# algorand-state-proof

./: Cargo.toml  LICENSE  README.md  build.rs
crates/keccak/: Cargo.toml  README.md
crates/keccak/src/: lib.rs  zeroize.rs
crates/merkle/: Cargo.toml  README.md
crates/merkle/src/: lib.rs
crates/state-proof/: Cargo.toml  README.md
crates/state-proof/src/: constants.rs  error.rs  lib.rs  light_block_header.rs  types.rs
crates/state-proof/src/codec/: error.rs  mod.rs  msgpack.rs  proof.rs
crates/state-proof/src/merkle/: mod.rs
crates/state-proof/src/stateproof/: coin.rs  commitment.rs  constants.rs  message.rs  mod.rs  specs.rs  verifier.rs  verify.rs
crates/state-proof/src/sumhash/: mod.rs
crates/state-proof/tests/: block_header.rs  state_proof.rs  txn_commitment.rs  verify_state_proof.rs
crates/state-proof/tests/common/: mod.rs
crates/sumhash/: Cargo.toml  README.md
crates/sumhash/src/: lib.rs
crates/xof/: Cargo.toml  README.md
crates/xof/src/: lib.rs  zeroize.rs
src/: keccak.rs  lib.rs
src/sumhash/: mod.rs
