[workspace]
members = [
    "crates/xof",
    "crates/sumhash",
    "crates/merkle",
    "crates/state-proof",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["th0tmaker"]
license = "MIT"
repository = "https://github.com/th0tmaker/algorand-state-proof"
publish = false
