[package]
name = "merkle"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Algorand Merkle tree and Vector Commitment tree with proof generation."

[dependencies]
sha2 = { version = "0.11", default-features = false }
sumhash = { path = "../sumhash" }
