[package]
name = "algorand-state-proof"
version = "0.1.0"
edition = "2024"
description = "Cryptographic attestation of Algorand's ledger state across a block range — enables trustless, lightweight, quantum-secure verification without running a node."
license = "MIT"

[features]
serde = ["dep:serde"]

[dependencies]
xof = { path = "../xof" }
merkle = { path = "../merkle" }
sha2 = "0.11"
algorand-falcon-keys = { git = "https://github.com/th0tmaker/algorand-falcon-keys", rev = "359ef8085c555746f2ff21fce98172d67b4d05cf" }
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
serde_json = "1"
