[package]
name = "algorand-state-proof"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Cryptographic attestation of Algorand's ledger state across a block range — enables trustless, lightweight, quantum-secure verification without running a node."

[features]
serde = ["dep:serde"]

[dependencies]
sha3 = { version = "0.11", default-features = false }
merkle = { path = "../merkle" }
sha2 = "0.11"
algorand-falcon-keys = { git = "https://github.com/th0tmaker/algorand-falcon-keys", rev = "60bef4a" }
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
serde_json = "1"
