[package]
name = "sumhash"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Subset-sum hash with SHAKE256-derived matrix and lookup-table compression. Includes Sumhash512 used in Algorand State Proofs."

[dependencies]
sha3 = { version = "0.11", default-features = false }